# project

./: README.md
hw_info_rest_api/: CMakeLists.txt
hw_info_rest_api/src/: App.cpp
hw_info_rest_api/src/controller/: AppController.cpp  AppController.h  AppController.hpp  CpuInfoCollector.cpp  CpuInfoCollector.h  HddInfoCollector.cpp  HddInfoCollector.h  MemInfoCollector.cpp  MemInfoCollector.h  NetIfInfoCollector.cpp  NetIfInfoCollector.h
hw_info_rest_api/src/dto/: DTOs.hpp
hw_info_rest_api/tests/: misc.py  test_info_rest_aip.py
hw_info_rest_api/utility/: simple_rest_api_srv.service
net_rest_api/: CMakeLists.txt
net_rest_api/src/: App.cpp
net_rest_api/src/controller/: AppController.hpp  MemInfoCollector.cpp  MemInfoCollector.h  MyController.hpp  NetIfInfoCollector.cpp  NetIfInfoCollector.h
